Fix issue with immersive styling: lack of padding caused by no comment counter, issue with the advert placeholder and first paragraph drop cap, add in extra margin between the standfirst and byline

--- a/ArticleTemplates/assets/scss/layout/_article--immersive.scss
+++ b/ArticleTemplates/assets/scss/layout/_article--immersive.scss
@@ -175,6 +175,7 @@ body.immersive .article--immersive {
             background: #fff;
             margin: 0 auto;
             max-width: 1200px;
+            padding-top: 6px;
         }
     }
 
@@ -194,7 +195,7 @@ body.immersive .article--immersive {
         }
 
         &__text {
-            margin: base-px(1, 0);
+            margin: base-px(1, 0, 3, 0);
 
             @include mq($from: col2) {
                 margin-top: 8px;
@@ -207,6 +208,10 @@ body.immersive .article--immersive {
 
             @include mq($from: col2) {
                 display: none;
+            }
+
+            .section__rule {
+                margin-bottom: 6px;
             }
         }
 
@@ -261,7 +266,7 @@ body.immersive .article--immersive {
         .comment-count {
             border: 0;
             color: color(tone-feature1-accent2);
-            padding: base-px(1,1,0.5,0)!important;
+            padding: base-px(.5, 1, .5, 0)!important;
 
             a {
                 color: color(tone-feature1) !important;
