--- a/ArticleTemplates/assets/scss/style-sync.css
+++ b/ArticleTemplates/assets/scss/style-sync.css
@@ -5246,7 +5246,8 @@ body.immersive .article--immersive {
   body.immersive .article--immersive .article__meta {
     background: #fff;
     margin: 0 auto;
-    max-width: 1200px; }
+    max-width: 1200px;
+    padding-top: 6px; }
   body.immersive .article--immersive .standfirst {
     color: #fff;
     background: none; }
@@ -5258,7 +5259,7 @@ body.immersive .article--immersive {
         border-color: #b82266;
         color: #b82266; }
     body.immersive .article--immersive .standfirst__text {
-      margin: 12px 0px; }
+      margin: 12px 0px 36px 0px; }
       @media all and (min-width: 40.63em) {
         body.immersive .article--immersive .standfirst__text {
           margin-top: 8px; } }
@@ -5268,6 +5269,8 @@ body.immersive .article--immersive {
       @media all and (min-width: 40.63em) {
         body.immersive .article--immersive .standfirst--mobile {
           display: none; } }
+      body.immersive .article--immersive .standfirst--mobile .section__rule {
+        margin-bottom: 6px; }
     body.immersive .article--immersive .standfirst--tablet {
       padding: 0;
       display: none; }
@@ -5305,7 +5308,7 @@ body.immersive .article--immersive {
     body.immersive .article--immersive .immersive__meta .comment-count {
       border: 0;
       color: #f7acbb;
-      padding: 12px 12px 6px 0px !important; }
+      padding: 6px 12px 6px 0px !important; }
       body.immersive .article--immersive .immersive__meta .comment-count a {
         color: #951c55 !important; }
         body.immersive .article--immersive .immersive__meta .comment-count a:active {
