--- a/test/unit/test.css
+++ b/test/unit/test.css
@@ -6707,7 +6707,8 @@
     #sandbox body.immersive .article--immersive .article__meta {
       background: #fff;
       margin: 0 auto;
-      max-width: 1200px; }
+      max-width: 1200px;
+      padding-top: 6px; }
     #sandbox body.immersive .article--immersive .standfirst {
       color: #fff;
       background: none; }
@@ -6719,7 +6720,7 @@
           border-color: #b82266;
           color: #b82266; }
       #sandbox body.immersive .article--immersive .standfirst__text {
-        margin: 12px 0px; }
+        margin: 12px 0px 36px 0px; }
         @media all and (min-width: 40.63em) {
           #sandbox body.immersive .article--immersive .standfirst__text {
             margin-top: 8px; } }
@@ -6729,6 +6730,8 @@
         @media all and (min-width: 40.63em) {
           #sandbox body.immersive .article--immersive .standfirst--mobile {
             display: none; } }
+        #sandbox body.immersive .article--immersive .standfirst--mobile .section__rule {
+          margin-bottom: 6px; }
       #sandbox body.immersive .article--immersive .standfirst--tablet {
         padding: 0;
         display: none; }
@@ -6766,7 +6769,7 @@
       #sandbox body.immersive .article--immersive .immersive__meta .comment-count {
         border: 0;
         color: #f7acbb;
-        padding: 12px 12px 6px 0px !important; }
+        padding: 6px 12px 6px 0px !important; }
         #sandbox body.immersive .article--immersive .immersive__meta .comment-count a {
           color: #951c55 !important; }
           #sandbox body.immersive .article--immersive .immersive__meta .comment-count a:active {
